--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build: .
     depends_on:
       - db
+      - waha
     ports:
       - "8069:8069"
     volumes:
@@ -14,6 +15,7 @@ services:
       - HOST=db
       - PORT=5432
     command: --
+
   db:
     image: postgres:15
     environment:
@@ -23,6 +25,18 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data
 
+  waha:
+    # IMAGEM CORRIGIDA AQUI
+    image: devlikeapro/waha
+    ports:
+      - "4000:3000"
+    environment:
+      # Adicione a sua API Key aqui se o WAHA a exigir
+      - WAHA_PLUS_API_KEY=sua-api-key-secreta
+    volumes:
+      - waha-sessions:/sessions
+
 volumes:
   odoo-data:
   db-data:
+  waha-sessions:
